<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

  <EditText
      android:id="@+id/editDistance"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:inputType="numberDecimal"
      android:hint="@string/distancia" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/total_de_quilometros" />

  <EditText
      android:id="@+id/editPrice"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:layout_marginTop="32dp"
      android:hint="@string/preco" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/preco_por_litro"

      />

  <EditText
      android:id="@+id/editAutonomy"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="numberDecimal"
      android:layout_marginTop="32dp"
      android:hint="@string/autonomia" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/quilometros_por_litro" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="64dp"
      android:text="@string/gasto_total"
      android:textAllCaps="true"
      android:textSize="20sp" />

  <TextView
      android:id="@+id/resultValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="16dp"
      android:textColor="@color/dark_blue"
      android:text="@string/valor"
      android:textSize="40sp" />

  <Button
      android:id="@+id/buttonCalculate"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:padding="20dp"
      android:textSize="20sp"
      android:backgroundTint="@color/btn_verde"
      android:textColor="@color/white"
      android:text="@string/calcular"

    />


</LinearLayout>